# agent

./: .gitconfig  .pre-commit-config.yaml  SETUP_SQUASH_MERGE.md  nvim-setup.lua  pyproject.toml
.github/: branch-protection.yml
.github/workflows/: validate-pr.yml
neovim-plugin/: README.md  test_lagos.lua
neovim-plugin/doc/: lagos.txt  tags
neovim-plugin/lua/lagos/: config.lua  init.lua  ui.lua
neovim-plugin/plugin/: lagos.vim
neovim-plugin/python/: lagos_rpc_server.py  requirements.txt
src/: main.py
